# go-kart-real-time-controller

./: .gitignore  README.md
.github/workflows/: ros2-ci.yaml
PCB/: README.md
PCB/ertc_breakout_pcb/: CAMtastic1.Cam  CAMtastic2.Cam  connectors (1).SchDoc  connectors.SchDoc  connectors1.0.SchDoc  ertc_breakout_pcb.PcbDoc  ertc_breakout_pcb.PrjPcb  ertc_breakout_pcb.PrjPcbStructure  ertc_footprints.PcbLib  ertc_symbols.SchLib  gerber.Cam  nc_drill.Cam
PCB/ertc_breakout_pcb/CAD Models/0026013115/: 0026013115.SchLib  MOLEX_0026013115.PcbLib
PCB/ertc_breakout_pcb/Manufacture/: ERTC_PCB_JLPCB_BOM.xlsx
PCB/ertc_breakout_pcb/__Previews/: connectors.SchDocPreview
PCB/ertc_breakout_pcb_v1/: README.md  connectors.SchDoc  ertc_breakout_pcb.PcbDoc  ertc_breakout_pcb.PrjPcb  ertc_breakout_pcb.SCHLIB  ertc_symbols.SchLib
PCB/ertc_breakout_pcb_v1-1/: CAMtastic1.Cam  CAMtastic2.Cam  connectors.SchDoc  ertc_breakout_pcb.PcbDoc  ertc_breakout_pcb.PrjPcb  ertc_footprints.PcbLib  ertc_symbols.SchLib
PCB/ertc_breakout_pcb_v1-1/Manufacture/: ERTC_PCB_JLPCB_BOM_v1-1.xlsx
ROS2/commons/src/: gkc_packets.cpp
ROS2/src/tai_gokart_controller/: CMakeLists.txt  package.xml
ROS2/src/tai_gokart_controller/design/: Packet_API.md  README.md
ROS2/src/tai_gokart_controller/include/tai_gokart_controller/: comm.hpp  config.hpp  tai_gokart_controller.hpp  tai_gokart_controller_node.hpp  tai_gokart_interface.hpp
ROS2/src/tai_gokart_controller/launch/: tai_gokart_controller.launch.py
ROS2/src/tai_gokart_controller/param/: tai_gokart_controller_param.yaml
ROS2/src/tai_gokart_controller/src/: comm.cpp  tai_gokart_controller.cpp  tai_gokart_controller_node.cpp  tai_gokart_interface.cpp
ROS2/src/tai_gokart_controller/test/: test_gkc_interface.cpp
ROS2/src/tai_gokart_msgs/: CMakeLists.txt
ROS2/src/tai_gokart_msgs/msg/: GkcCommand.msg  (+1 more)
ROS2/src/tai_gokart_packet/: CMakeLists.txt  package.xml
ROS2/src/tai_gokart_packet/design/: Packet_API.md  README.md
ROS2/src/tai_gokart_packet/include/: gkc_debug.hpp  gkc_packet_factory.hpp  gkc_packets.hpp
ROS2/src/tai_gokart_packet/include/tai_gokart_packet/: gkc_debug.hpp  gkc_packet_factory.hpp  gkc_packet_subscriber.hpp  gkc_packet_utils.hpp  gkc_packets.hpp  version.hpp
ROS2/src/tai_gokart_packet/src/: gkc_packet_factory.cpp  gkc_packets.cpp
ROS2/src/tai_gokart_packet/test/: test_gkc_packet.cpp
ROS2/tai_gokart_controller/: CMakeLists.txt  package.xml
ROS2/tai_gokart_controller/design/: Packet_API.md
src/tai_gokart_controller/: package.xml
src/tai_gokart_controller/design/: README.md
src/tai_gokart_controller/param/: tai_gokart_controller_param.yaml
src/tai_gokart_controller/src/: tai_gokart_controller_node.cpp
src/tai_gokart_msgs/: package.xml
src/tai_gokart_packet/: package.xml
src/tai_gokart_packet/design/: Packet_API.md  README.md
src/tai_gokart_packet/src/: gkc_packet_factory.cpp
src/tai_gokart_packet/test/: test_gkc_packet.cpp
(+34 files in other folders)
